added controllers and routes for supplier collection
